--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur officiis labore voluptatum dolor officia, quidem sit excepturi corporis quo velit nesciunt commodi soluta quae? Expedita maxime excepturi esse voluptas hic.</p>
 </body>
 </html>
