--- a/header.html
+++ b/header.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>this is our header</h1>  
+  <h1>this is our header</h1> 
+  <h1>this is reebok shoe collection</h1> 
 </body>
 </html>
