--- a/backgroundimages.html
+++ b/backgroundimages.html
@@ -103,7 +103,7 @@
                   <div><p>Running Shoes</p></div>
                   <div><p>White Shoes</p></div>
                   <div><p style="margin-left: 30px;">T-Shirts</p></div>
-                  <div><p style="margin-left: 40px;">Zig</p></div>
+                  <div><p style="margin-left: 40px;">Zig</p></p></div>
            </div>
        </div>
     </div>
