--- a/backgroundimages.html
+++ b/backgroundimages.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/577c169d0f.js" crossorigin="anonymous"></script>
+     <title>Document</title>
+   
 </head>
 <style>
     #box3_backgroundimage{
@@ -50,19 +52,20 @@
              }
               #hover{
                   height: 60px;
-                 width: 500px;
+                 width: 650px;
                  margin: auto;
                  display: flex;
                  margin-bottom: 20px;                 
               }
               #hover>div{
                   height: 40px;
-                  width: 200px;
+                  width: 350px;
                   border-radius: 18px;
                   margin: auto;
                   margin: 7px;
                   background-color: black;
                   display: flex;
+                  justify-content: space-around;
               }
               p{
                  text-align: center;
@@ -72,7 +75,8 @@
               }
               #hover>div:hover{
                   background-color: rgba(43, 41, 41, 0.637); 
-                  text-decoration:dashed ;   
+                  text-decoration:line;
+                   cursor: pointer;
               }
 </style>
 <body>
@@ -100,10 +104,10 @@
        <div id="pop"><P style="color: black;">TRENDING  NOW</P></div>
        <div id="push">
            <div id="hover">
-                  <div><p>Running Shoes</p></div>
-                  <div><p>White Shoes</p></div>
-                  <div><p style="margin-left: 30px;">T-Shirts</p></div>
-                  <div><p style="margin-left: 40px;">Zig</p></p></div>
+                  <div><p>Running Shoes <p><i style='font-size:24px' class='fas'>&#xf061;</i></p></p></div>
+                  <div><p>White Shoes <p><i style='font-size:24px' class='fas'>&#xf061;</i></p></p></div>
+                  <div><p style="margin-left: 30px;">T-Shirts <p><i style='font-size:24px' class='fas'>&#xf061;</i></p></p></div>
+                  <div><p style="margin-left: 40px;">Zig<p><i style='font-size:24px' class='fas'>&#xf061;</i></p> </div>
            </div>
        </div>
     </div>
