--- a/backgroundimages.html
+++ b/backgroundimages.html
@@ -9,6 +9,7 @@
    
 </head>
 <style>
+    /* sachin css part start here */
     #box3_backgroundimage{
         display: flex;
         margin-top: 20px;
@@ -18,14 +19,17 @@
         height: 180px;
         width: 360px;
     }
-    img{
+    .sach_2{
         height: 180px;
         width: 360px;
     }
-    a{
-           color: black;
+    .sach_3{
+         color: black;
            margin-left: 150px;
            margin-top: 10px;
+    }
+    .sach_4{
+        color: black;
     }
     #box3_1{
          width: 1000px;
@@ -33,7 +37,7 @@
         margin-top: 140px;
         background-color:#f0f0f0;
          }
-         h1{
+        .sach_1{
              text-align: center;
              color: black;
          }
@@ -67,7 +71,7 @@
                   display: flex;
                   justify-content: space-around;
               }
-              p{
+              .sach_5{
                  text-align: center;
                   margin-top: 10px;
                   color: white; 
@@ -78,38 +82,42 @@
                   text-decoration:line;
                    cursor: pointer;
               }
+               
+              /* sachin css part end here */
 </style>
 <body>
+    <!-- sachin body part here -->
     <div id="box3_backgroundimage">
        <div>
-           <img src="https://content.shop4reebok.com/static/spotlight/RBK_Website_Banners_Shoes_130821.jpg"/>
-           <a href="">SHOES</a>
+           <img class="sach_2" src="https://content.shop4reebok.com/static/spotlight/RBK_Website_Banners_Shoes_130821.jpg"/>
+           <a class="sach_3" href="">SHOES</a>
        </div>
      
        <div>
-           <img src="https://content.shop4reebok.com/static/spotlight/face_covers_spotlight_960x480_7th_April.jpg"/>
-           <a href="">FACE COVERS</a>
+           <img class="sach_2" src="https://content.shop4reebok.com/static/spotlight/face_covers_spotlight_960x480_7th_April.jpg"/>
+           <a  class="sach_3" href="">FACE COVERS</a>
        </div>
-       <div><img src="https://content.shop4reebok.com/static/spotlight/ATHLEISURE_spotlight_960x480_15th_Sept.jpg"/>
-        <a href="">ATHLEISURE</a>
+       <div><img class="sach_2"  src="https://content.shop4reebok.com/static/spotlight/ATHLEISURE_spotlight_960x480_15th_Sept.jpg"/>
+        <a class="sach_3" href="">ATHLEISURE</a>
     </div>
-       <div><img src="https://content.shop4reebok.com/static/spotlight/Accessories_spotlight_960x480_15th_Sept.jpg"/>
-        <a href="">ACCESSORIES</a>
+       <div><img class="sach_2"  src="https://content.shop4reebok.com/static/spotlight/Accessories_spotlight_960x480_15th_Sept.jpg"/>
+        <a class="sach_3" href="">ACCESSORIES</a>
     </div>
     </div>
     <div id="box3_1">
-      <h1>Extra 1O% Off on Prepaid orders Minimum Cart Value -INR 1000</h1>
+      <h1 class="sach_1">Extra 1O% Off on Prepaid orders Minimum Cart Value -INR 1000</h1>
     </div>
     <div id="box3_2">
-       <div id="pop"><P style="color: black;">TRENDING  NOW</P></div>
+       <div id="pop"><P  class="sach_4">TRENDING  NOW</P></div>
        <div id="push">
            <div id="hover">
-                  <div><p>Running Shoes <p><i style='font-size:24px' class='fas'>&#xf061;</i></p></p></div>
-                  <div><p>White Shoes <p><i style='font-size:24px' class='fas'>&#xf061;</i></p></p></div>
-                  <div><p style="margin-left: 30px;">T-Shirts <p><i style='font-size:24px' class='fas'>&#xf061;</i></p></p></div>
-                  <div><p style="margin-left: 40px;">Zig<p><i style='font-size:24px' class='fas'>&#xf061;</i></p> </div>
+                  <div><p class="sach_5">Running Shoes <p class="sach_5"><i style='font-size:24px' class='fas'>&#xf061;</i></p></p></div>
+                  <div><p class="sach_5">White Shoes <p class="sach_5"><i style='font-size:24px' class='fas'>&#xf061;</i></p></p></div>
+                  <div><p class="sach_5" style="margin-left: 30px;">T-Shirts <p class="sach_5"><i style='font-size:24px' class='fas'>&#xf061;</i></p></p></div>
+                  <div><p class="sach_5" style="margin-left: 40px;">Zig<p class="sach_5"><i style='font-size:24px' class='fas'>&#xf061;</i></p> </div>
            </div>
        </div>
     </div>
+    <!-- sachin body part end here -->
 </body>
 </html>
