--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <script src="https://kit.fontawesome.com/5c6293b5b4.js" crossorigin="anonymous"></script>
     <style>
+        /* priyanka css part is here */
         .pri_h1{
             font-size: 30px;
             font-family: sans-serif;
@@ -43,6 +44,7 @@
         .pri_i{
             margin-left: 25px;
         }
+         /* priyanka css part is here */
     </style>
 </head>
 <body>
