--- a/backgroundimages.html
+++ b/backgroundimages.html
@@ -10,6 +10,9 @@
 </head>
 <style>
     /* sachin css part start here */
+    .sach_cont{
+         width: 100%;
+    }
     #box3_backgroundimage{
         display: flex;
         margin-top: 20px;
@@ -19,6 +22,7 @@
         height: 180px;
         width: 360px;
     }
+    /* for image */
     .sach_2{
         height: 180px;
         width: 360px;
@@ -71,6 +75,7 @@
                   display: flex;
                   justify-content: space-around;
               }
+              /* for font awesome icon */
               .sach_5{
                  text-align: center;
                   margin-top: 10px;
@@ -87,6 +92,7 @@
 </style>
 <body>
     <!-- sachin body part here -->
+  <div class="sach_cont">
     <div id="box3_backgroundimage">
        <div>
            <img class="sach_2" src="https://content.shop4reebok.com/static/spotlight/RBK_Website_Banners_Shoes_130821.jpg"/>
@@ -117,6 +123,7 @@
                   <div><p class="sach_5" style="margin-left: 40px;">Zig<p class="sach_5"><i style='font-size:24px' class='fas'>&#xf061;</i></p> </div>
            </div>
        </div>
+    </div>
     </div>
     <!-- sachin body part end here -->
 </body>
