--- a/first.html
+++ b/first.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    a{
+        text-decoration: none;
+    }
+</style>
 <body>
     <h1>helooo</h1>
+    <a href="">masai</a>
 </body>
 </html>
