--- a/header.html
+++ b/header.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<title>Font Awesome 5 Icons</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+<!--Get your own code at fontawesome.com-->
 </head>
 <body>
-  <h1>this is our header</h1> 
-  <h1>this is reebok shoe collection</h1> 
+
+<h1>fas fa-arrow-right</h1>
+
+<i class='fas fa-arrow-right'></i>
+<i class='fas fa-arrow-right' style='font-size:24px'></i>
+<i class='fas fa-arrow-right' style='font-size:36px'></i>
+<i class='fas fa-arrow-right' style='font-size:48px;color:red'></i>
+<br>
+
+<p>Used on a button:</p>
+<button style='font-size:24px'>Button <i class='fas fa-arrow-right'></i></button>
+
+<p>Unicode:</p>
+<i style='font-size:24px' class='fas'>&#xf061;</i>
+
 </body>
 </html>
