--- a/backgroundimages.html
+++ b/backgroundimages.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/577c169d0f.js" crossorigin="anonymous"></script>
-     <title>Document</title>
-   
+     <title>Reebok India</title>
+     <link rel="icon" href="reebok-3.png" type="image/jpg">
 </head>
 <style>
     /* sachin css part start here */
